confirmation pop-up alignment corrected

--- a/donor-registry/src/styles.scss
+++ b/donor-registry/src/styles.scss
@@ -1387,6 +1387,10 @@ formly-multi-schema-type .card {
         display: flex;
     flex-direction: column;
     }
+    .modal-body-mobile{
+        width: 336px;
+        margin-left: -14px;
+    }
     
 }
 
